# motion_sync

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  TODO.md  pyproject.toml
.github/workflows/: test.yml
configs/: motion_sync.yaml
data/msg/: Markers.msg
data/vicon_models/: Left_Shoe.vsk  Right_Shoe.vsk  Skateboard.vsk
holosoma/: .gitignore  CONTRIBUTING.md  README.md
motion_sync/: __init__.py  _storage.py  body_marker_plot.py  config.py  constants.py  contact_layer.py  contact_metadata.py  contact_model.py  contact_registration.py  intervals.py  main.py  mocap_schema.py  rigid_body_model_estimator.py  session.py  surface_schema.py  sync_trim_video.py  sync_visualize.py  synced_dataset.py  syncer.py  types.py  vicon_recording.py  video_schema.py
motion_sync/app/: convert.py  detect.py  fkin.py  model.py  sync.py
motion_sync/contacts/: __init__.py  binary.py  categorical.py  foot_support.py  shoe_board_grip.py  skate_foot_support.py
motion_sync/schemas/: __init__.py  (+1 more)
retargeting/: align_to_ground.py  config.py  constants.py  ground_alignment_solver.py  holosoma_export.py  main.py  sync_trim_video.py  sync_visualize.py  syncer.py  utils.py
scripts/: convert_bags.bash  model_rigid_bodies.bash  preprocess_videos.bash  run.bash  run_smplx_fkin.bash  sync.bash  sync_trim_video.bash  test.bash
tests/: __init__.py  support.py  test_body_marker_plot.py  test_config.py  test_contact_layer.py  test_contact_metadata.py  test_convert_merge.py  test_marker_visibility.py  test_mocap_schema.py  test_rigid_body_estimator.py  test_session.py  test_sync_trim.py  test_synced_dataset.py  test_syncer_io.py  test_syncer_lag.py  test_syncer_quat.py  test_syncer_resample.py  test_syncer_schema.py  test_syncer_stitcher.py  test_video_schema.py
(+18 files in other folders)
