[build-system]
requires = ["hatchling>=1.0.0"]
build-backend = "hatchling.build"

[project]
name = "retargeting"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "opencv-python>=4.11.0",
    "matplotlib>=3.10.9",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
    "rich>=15.0.0",
    "rosbags>=0.11.2",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "smplx[all]>=0.1.28",
    "torch>=2.11.0",
    "tqdm>=4.67.3",
    "typer>=0.25.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
]

[project.scripts]
retargeting = "retargeting.main:main"

[tool.hatch.build.targets.wheel]
packages = ["retargeting"]

[tool.uv]
package = true
