[build-system]
requires = ["hatchling>=1.0.0"]
build-backend = "hatchling.build"

[project]
name = "motion-sync"
version = "0.1.0"
description = "Vicon + GVHMR ingest, time sync, and typed SyncClip multimodal trials."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "opencv-python>=4.11.0",
    "matplotlib>=3.10.9",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
    "rich>=15.0.0",
    "rosbags>=0.11.2",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "smplx[all]>=0.1.28",
    "torch>=2.11.0",
    "tqdm>=4.67.3",
    "typer>=0.25.1",
    "pin>=3.9.0",
    "robot-descriptions>=2.0.0",
    "meshcat>=0.3.2",
    "numba>=0.65.1",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=4.0.0",
]

[project.scripts]
motion-sync = "motion_sync.main:main"

[tool.hatch.build.targets.wheel]
packages = ["motion_sync"]

[tool.uv]
package = true
